--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,4 @@
 PORT=5000
-MONGODB_URI=mongodb://localhost:27017/hr-management-portal
+MONGODB_URI=mongodb://localhost:27017/hr_management
 JWT_SECRET=your-super-secret-jwt-key-change-this-in-production
 NODE_ENV=development
